# fooyin_chromecast

./: .gitignore  CMakeLists.txt  DOCUMENTATION_INDEX.md  ENHANCEMENT_cover_art_support.md  IMPLEMENTATION_STATUS.md  ISSUE_track_skipping_fix.md  LOGGING.md  LOGGING_MIGRATION.md  README.md  chromecast_plugin_architecture.md  chromecast_plugin_plan.md  metadata.json
.claude/: settings.local.json
include/chromecast/: chromecast_common.h
src/: chromecastplugin.cpp  chromecastplugin.h
src/core/: castprotocol.cpp  castprotocol.h  castsocket.cpp  castsocket.h  chromecastlogging.cpp  chromecastlogging.h  chromecastoutput.cpp  chromecastoutput.h  communicationmanager.cpp  communicationmanager.h  device.cpp  device.h  discoverymanager.cpp  discoverymanager.h  httpserver.cpp  httpserver.h  transcodingmanager.cpp  transcodingmanager.h
src/integration/: playbackintegrator.cpp  playbackintegrator.h  trackmetadata.cpp  trackmetadata.h
src/ui/: chromecastsettingspage.cpp  chromecastsettingspage.h  devicewidget.cpp  devicewidget.h  devicewidget.ui  playbackcontrols.cpp  playbackcontrols.h  playbackcontrols.ui
